lots of bug fixes

--- a/citation/citeproc/data/locale/locales-en-US.xml
+++ b/citation/citeproc/data/locale/locales-en-US.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <locale xmlns="http://purl.org/net/xbiblio/csl" version="1.0" xml:lang="en">
    <style-options punctuation-in-quote="true"/>
    <date form="text">
